# monkey-rs

./: Cargo.toml  README.md
src/: ast.rs  eval.rs  lexer.rs  lib.rs  main.rs  parser.rs  repl.rs  tokens.rs
src/snapshots/: monkey_rs__parser__tests__call_expressions.snap  monkey_rs__parser__tests__call_parameter_parsing.snap  monkey_rs__parser__tests__function_paramenter_parsing.snap  monkey_rs__parser__tests__function_parsing.snap  monkey_rs__parser__tests__if_else_expression.snap  monkey_rs__parser__tests__if_else_return_expression.snap  monkey_rs__parser__tests__if_expression.snap  monkey_rs__parser__tests__parsing_boolean_expression.snap  monkey_rs__parser__tests__parsing_identifier_expression.snap  monkey_rs__parser__tests__parsing_infix_expression.snap  monkey_rs__parser__tests__parsing_integer_expression.snap  monkey_rs__parser__tests__parsing_let_statemt.snap  monkey_rs__parser__tests__parsing_prefix_expression.snap  monkey_rs__parser__tests__parsing_return_statement.snap
src/testdata/: eval-bang-operators.monkey  eval-booleans.monkey  eval-conditionals.monkey  eval-debug.monkey  eval-errors.monkey  eval-integers.monkey  eval-return.monkey
src/testdata/output/eval/: monkey_rs__eval__tests__evaluting_bang_operators.snap  monkey_rs__eval__tests__evaluting_boolean_expressions.snap  monkey_rs__eval__tests__evaluting_conditionals.snap  monkey_rs__eval__tests__evaluting_errors.snap  monkey_rs__eval__tests__evaluting_integer_expressions.snap  monkey_rs__eval__tests__evaluting_returns.snap
