[package]
name = "monkey-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.20.0", features = ["ron", "yaml"] }
